# virtual_voicebot

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PRINCIPLES.md  README.md  STYLE.md  development_process.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  intent_prompt.example.txt  intent_router.yaml  prompt.example.txt  run.sh  weather_prompt.example.txt
docs/: DOCS_ANALYSIS.md  (+10 more)
virtual-voicebot-backend/: .env.serversync.systemd.example  .env.systemd.example  AGENTS.md  CLAUDE.md  CONVENTIONS.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.dev.yml  run.sh  run_register.sh  run_uas.sh
virtual-voicebot-backend/docs/: DEVELOPMENT_GUIDE.md  TSD.md  ai.md  app.md  contract.md  design.md  desing.md  gap-analysis.md  mvp.md  recording.md  rtp.md  session.md  sip.md  tests.md  tests_e2e_sipp.md  todo.md  todo_ai.md  todo_app_ai.md  todo_media.md  todo_rtp.md  todo_session.md  todo_sip.md  todo_tests_ops.md  todo_transport.md
virtual-voicebot-backend/migrations/: 20260206000001_create_ivr_flows.sql  20260206000002_create_ivr_nodes.sql  20260206000003_create_ivr_transitions.sql  20260206000004_create_spam_numbers.sql  20260206000005_create_registered_numbers.sql  20260206000006_create_routing_rules.sql  20260206000007_create_call_log_index.sql  20260206000008_create_call_logs_partitioned.sql  20260206000009_create_call_logs_initial_partitions.sql  20260206000010_create_recordings.sql  20260206000011_create_sync_outbox.sql  20260206000012_create_system_settings.sql  (+14 more)
(+576 files in other folders)
