[package]
name = "virtual-voicebot-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
env_logger = "0.11"
log = "0.4"
hound = "3"
humantime = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
nom = "7"
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-transcribe = "1"
rand = "0.8"
rustls = "0.21"
rustls-pemfile = "1"
tokio-rustls = "0.24"
tsubakuro-rust-core = "0.7.0"

[dev-dependencies]
tempfile = "3"
rcgen = "0.13"

[[test]]
name = "recording_http_e2e"
path = "test/e2e/recording_http_e2e.rs"
